(STRETCH) (DESIGN - LESS) : fixed the height of the carousel gfx

--- a/css/index.css
+++ b/css/index.css
@@ -316,7 +316,7 @@ header .close-button:hover {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  height: 200px;
+  height: 400px;
   width: 1024px;
   position: relative;
   overflow: hidden;
