--- a/less/carousel.less
+++ b/less/carousel.less
@@ -2,7 +2,7 @@
 
   margin: 0 auto;
   .flex(center, center);
-  height: 200px;
+  height: 400px;
   width: 1024px;
   position: relative;
   overflow: hidden;
